production-api-geral/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: api
  sessionAffinity: None
  type: ClusterIP
