production-api-geral/route-api.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: api
spec:
  host: production-api.tcero.tc.br
  port:
    targetPort: http
  tls:
    caCertificate: |
      -----BEGIN CERTIFICATE-----
      MIIFgTCCBGmgAwIBAgIQOXJEOvkit1HX02wQ3TE1lTANBgkqhkiG9w0BAQwFADB7
[...]
      vGp4z7h/jnZymQyd/teRCBaho1+V
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIGGTCCBAGgAwIBAgIQE31TnKp8MamkM3AZaIR6jTANBgkqhkiG9w0BAQwFADCB
[...]
      MntHWpdLgtJmwsQt6j8k9Kf5qLnjatkYYaA7jBU=
      -----END CERTIFICATE-----
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIG7jCCBdagAwIBAgIQGWqTSeLU8c/ap1NiT6tPDjANBgkqhkiG9w0BAQsFADCB
[...]
      0pc=
      -----END CERTIFICATE-----
    key: |
      -----BEGIN PRIVATE KEY-----
      MIIEvgIBADANBgkqhkiG9w0BAQEFAASCBKgwggSkAgEAAoIBAQCIjivXxK+zLrka
[...]
      cK6tsnp70hYUJ3LWXeup7lg3
      -----END PRIVATE KEY-----
    termination: edge
  to:
    kind: Service
    name: api
    weight: 100
  wildcardPolicy: None
